提交垂直布局容器代码

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,7 @@
 use_frameworks!
 
 target 'FPVerticalView_Example' do
-  pod 'FPVerticalView', :path => '../'
 
-  target 'FPVerticalView_Tests' do
-    inherit! :search_paths
+    pod 'Masonry'
 
-    
-  end
 end
